# tianshou_agents

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/: ma_petting_zoo.ipynb  sac_pendulum.ipynb  sac_pendulum_passive.ipynb  saving_agents.ipynb
tests/: active_vs_passive_benchmark.ipynb  test_agents.py  test_passive_agent.py  test_passive_collector.py  test_rlnetwork.py  test_saving.py  test_shape_utils.py  test_trainer.py  test_validate_shape.py
tianshou_agents/: __init__.py  agent.py  callback.py  callbacks.py  components.py  dqn.py  network.py  networks.py  preset.py  sac.py  schedule.py  schedules.py  utils.py
tianshou_agents/components/: __init__.py  collector.py  component.py  components.py  env.py  logger.py  passive_collector.py  passive_interface.py  policy.py  preset.py  replay_buffer.py  trainer.py
tianshou_agents/methods/: dqn.py  ma.py  sac.py
tianshou_agents/utils/: __init__.py  config.py  config_router.py  env_wrapper.py  generic.py  state_dict.py
