[metadata]
name = tianshou_agents
version = attr: tianshou_agents.VERSION
description = Provides a more high-level to Tianshou, including easily customizable presets.
long_description = file: README.md
keywords = RL, preset, agent, tianshou
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   tianshou
   gym

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.extras_require]
;javascript_players = notebook_invoke

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
